--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.show-sql = true
 #smtp mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ch.malli1203@gmail.com
-spring.mail.password=malli1203
+spring.mail.username="enter your email here"
+spring.mail.password="your email password"
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
